2.4.11
- add 9 curio items
- add 9 traits
- add witch droplet, booster potion, witch charge, eternal witch charge
- make fiery trait more lenient
- Repelling not targeting creative
- add config to allow exponential health/damage
- add config to allow disabling orb
- fix ender trait throwing error when teleport distance is 0
- fix ender trait teleporting to invalid position
- add config option to determine if death would reduce difficulty when keep inventory is true TODO

2.4.10
- Fix regen calling potion test every tick
- Fix Invisible apply effects repeatedly
- Fix name plates being rendered from very far away
- Fix trait generation
- Add Cataclysm compat

2.4.9
- bosses will no longer have undead trait
- now trait whitelist/blacklist are all tag based
- allow config to disable all individual traits
- display spawn requirement
- improve texture

2.4.8
- Add 4 rings
- add 2 hand curio
- add witch wand
- no longer add level to name
- Make mobs drop more exp

2.4.7
- Add bottle of curse and bottle of sanity
- Add curse of 7 sins (7 items)
- Add patchouli for items
- Improve JEI tooltip visuals
- Fix soul burner effect never ends
- Increase level requirements for some traits

2.4.6
- Fix MobCapLootCondition
- Add weapon config
- Add entity config, remove entityMap from difficulty config
- Add multi-trait conditions JEI support and examples
- Add default configs for Twilight Forest mobs

2.4.5
- Fix chunk not marked dirty when using hostility orb

2.4.4
- Change default config values (delete old config file to take effect)
- Add command system
- Increase levels required by traits for most traits
- Fix the bug that spawner might spawn mobs with no traits if trait spawn chance is not 100%
- Change Invisibility drop from potion to phantom membrane
- Mobs that cannot attack nearest player will not have a level
- Adds default dimension difficulty
- Add options for minimum level to be bypassed by difficulty clearing or not