@@ -13,7 +13,7 @@ jei_version = 15.2.0.27
 curios_version = 5.3.4+1.20.1
 
 modid = l2hostility
-ll_version = 2.4.11-pre14
+ll_version = 2.4.11-pre15
 lljij = true
 rootMod = false
 
